# Proyectos

Binarizacion/Evaluacion/: generar_lista_salida_gt.sh  lista_salida_gt
Binarizacion/binarizacion/: Bernsen.py  Niblack.py  Otsu.py  Sauvola.py
Biometria/medidas/: medidas_calidad.py
Biometria/sistemas_basados_caracteristicas/: eigenfaces.py  fisherfaces.py
CSP/Reuniones/: reuniones.csp  reuniones.py
CSP/Sudoku/: salida_sudoku.txt  sudoku.csp  sudoku.py
CSP/nReinas/: ejem10queens.csp  ejem11queens.csp  ejem12queens.csp  ejem4queens.csp  ejem6queens.csp  ejem9queens.csp
Crucero Coche/: coche.CLP
Genetico Operadores/: genetico.py
Mecatronica/: LIMPIADOR.c  SUMO.c
Negociacion Bilateral/: agente1.xml  agente2.xml  dominio.py  estrategias_aceptacion.py  estrategias_concesion.py  funciones_utilidad.py  negociacion.py  preferencias_agente1.py  preferencias_agente2.py
Planificacion/: dominio.pddl  escenario1.pddl  escenario2.pddl
SBR/: animales.clp  diagnosticar.clp
Traduccion2/: CarrascoGomezPascualAndres.hyp
alturaX/: CMakeLists.txt  alturaX.cpp  dft.cpp  grafica.cpp  limpiar.sh  segmentarImagen.cpp
alturaX/Experimentacion/: calcular_error_absoluto.sh  calcular_error_relativo.sh  generacion_normal.sh  generacion_random.sh  instrucciones.txt  obtener_alturas.sh  segmentar_corpus.sh
alturaX/Experimentacion/Resultados/: alturas_corpus_test_revisadas.txt  alturas_corpus_train_estimadas.txt  error_margen_obtenido.txt  error_relativo_obtenido.txt  generacion_datos.txt
kneighbours/: grafica.sh  kneighbours.py
webgl/: bolos.html  brazoRobot.html
(+580 files in other folders)
